--- a/student.html
+++ b/student.html
@@ -40,7 +40,7 @@
         <nav class="navbar">
             <a href="#home">home</a>
             <a href="#profile">My profile</a>
-            <a href="#books">List Books</a>
+            <a href="#books">Book List</a>
             <a href="#borrowed">Borrowed Books</a>
             <a href="#list">Favorite List</a>
         </nav>
