--- a/student.html
+++ b/student.html
@@ -66,7 +66,7 @@
         <div class="content">
             <h3>Welcome Dear Student</h3>
             <p>"Libraries store the energy that fuels the imagination. They open up windows to the world and inspire us to explore and achieve, and contribute to improving our quality of life."</p>
-            <a href="#" class="btn">view list books</a>
+            <a href="#" class="btn">view book list</a>
         </div>
 
         <div class="swiper books-slider">
